--- a/configurator/config.json
+++ b/configurator/config.json
@@ -19,7 +19,7 @@
   ],
   "options": {
     "username": "admin",
-    "password": null,
+    "password": "admin",
     "ssl": false,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
