Updated to 0.60.8; Containers built from base images

--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -5,12 +5,24 @@ FROM $BUILD_FROM
 COPY run.sh /
 COPY mosquitto.conf /etc/
 COPY customtts.sh /usr/bin
+COPY snips-entrypoint.sh /
 
-RUN chmod a+x /run.sh \
+ARG BUILD_FROM
+
+RUN apt update \
+    && apt-get install -y dirmngr apt-utils apt-transport-https jq unzip supervisor mpg123 curl tzdata
+
+RUN if [ "$BUILD_FROM" = "ubuntu:xenial" ]; then bash -c 'echo "deb https://debian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
+        && apt-key adv --keyserver pgp.mit.edu --recv-keys F727C778CCB0A455; \
+    else bash -c 'echo "deb https://raspbian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
+        && apt-key adv --keyserver pgp.surfnet.nl --recv-keys D4F50CDCA10A2849; \
+    fi
+
+RUN apt update \
+    && apt install -y snips-platform-voice \
+    && chmod a+x /run.sh \
     && chmod a+x /usr/bin/customtts.sh \
-    && apt-get update \
-    && apt-get install -y mpg123 curl tzdata \
-    && apt-get install -y snips-asr-injection || true \
+    && chmod a+x /snips-entrypoint.sh \
     && rm -rf /var/lib/apt/lists/* \
     && curl -L -o /assistant_Hass_de.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_de.zip \
     && curl -L -o /assistant_Hass_en.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_en.zip \
