update snips-entrypoint and build images

--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -9,17 +9,18 @@ COPY snips-entrypoint.sh /
 
 ARG BUILD_FROM
 
-RUN apt update \
+RUN echo nameserver 1.1.1.1 > /etc/resolv.conf \
+    && apt update \
     && apt-get install -y dirmngr apt-utils apt-transport-https jq unzip supervisor mpg123 curl tzdata
 
-RUN if [ "$BUILD_FROM" = "ubuntu:xenial" ]; then bash -c 'echo "deb https://debian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
-        && apt-key adv --keyserver pgp.mit.edu --recv-keys F727C778CCB0A455; \
+RUN if [ "$BUILD_FROM" = "homeassistant/amd64-base-ubuntu" ]; then bash -c 'echo "deb https://debian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
+        && apt-key adv --keyserver pgp.surfnet.nl --recv-keys F727C778CCB0A455; \
     else bash -c 'echo "deb https://raspbian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
         && apt-key adv --keyserver pgp.surfnet.nl --recv-keys D4F50CDCA10A2849; \
     fi
 
 RUN apt update \
-    && apt install -y snips-platform-voice \
+    && apt install -y snips-platform-voice snips-asr \
     && chmod a+x /run.sh \
     && chmod a+x /usr/bin/customtts.sh \
     && chmod a+x /snips-entrypoint.sh \
