Revert "Set a password in default config"
This reverts commit 19f5a3fd0bfe3ef1780a0e6f4ae3c84703bdda52.

--- a/configurator/config.json
+++ b/configurator/config.json
@@ -19,7 +19,7 @@
   ],
   "options": {
     "username": "admin",
-    "password": "admin",
+    "password": null,
     "ssl": false,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
