--- a/deconz/Dockerfile
+++ b/deconz/Dockerfile
@@ -37,8 +37,9 @@ RUN if [ "${BUILD_ARCH}" = "armhf" ] || [ "${BUILD_ARCH}" = "aarch64" ]; \
         fi \
     && dpkg -i /deconz.deb \
     && rm -f /deconz.deb \
-    && mkdir -p /root/otau \
     && chown root:root /usr/bin/deCONZ* \
+    && mkdir -p /root/otau \
+    && mkdir -p /root/run/udev/data \
     && echo -e "E:ID_VENDOR_ID=0403\nE:ID_MODEL_ID=6015" > /root/run/udev/data/c188:0 \
     && sed -i 's/\/root/\/data/' /etc/passwd
 
