--- a/deconz/config.json
+++ b/deconz/config.json
@@ -13,6 +13,7 @@
         "8080/tcp": 9881
     },
     "auto_uart": true,
+    "gpio": true,
     "apparmor": false,
     "options": {
         "deconz_device": null
