--- a/deconz/config.json
+++ b/deconz/config.json
@@ -15,6 +15,13 @@
     "auto_uart": true,
     "gpio": true,
     "apparmor": false,
+    "devices": [
+        "/dev/mem:/dev/mem:rw"  
+    ],
+    "privileged": [
+        "SYS_ADMIN",
+        "SYS_RAWIO"
+    ],
     "options": {
         "device": null
     },
