--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 
 script:
  - docker run --rm -v $(pwd):/mnt koalaman/shellcheck **/*.sh
- - for addon in *; do docker run --rm hadolint/hadolint:v1.15.0 < "${addon}/Dockerfile"; done
+ - for addon_docker in **/Dockerfile; do docker run --rm hadolint/hadolint:v1.15.0 < "${addon_docker}"; done
  - cat -- **/*.json | docker run --rm -v $(pwd):/mnt stedolan/jq '.'
 
 matrix:
