Adding snips-injection - Update dockerfile - Snips injection version print - Start snips-injection in run - Versionbump to 5.2

--- a/snips/config.json
+++ b/snips/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "Snips.AI",
-  "version": "5.1",
+  "name": "Snips.AI´",
+  "version": "5.2",
   "slug": "snips",
   "description": "Local voice control platform",
   "url": "https://home-assistant.io/addons/snips/",
