--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -10,19 +10,20 @@ COPY snips-entrypoint.sh /
 ARG BUILD_ARCH
 
 RUN apt-get update \
-    && apt-get install -y dirmngr apt-utils apt-transport-https jq unzip supervisor mpg123 curl tzdata \
-    && rm -rf /var/lib/apt/lists/* \
+    && apt-get install -y dirmngr apt-utils apt-transport-https jq unzip supervisor mpg123 curl tzdata
+
+RUN rm -rf /var/lib/apt/lists/* \
     && if [ "$BUILD_ARCH" = "amd64" ]; \
-        then \
-            bash -c 'echo "deb https://debian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
-            && apt-key adv --keyserver pgp.surfnet.nl --recv-keys F727C778CCB0A455; \
-        else \
-            bash -c 'echo "deb https://raspbian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
-            && apt-key adv --keyserver pgp.surfnet.nl --recv-keys D4F50CDCA10A2849; \
-        fi
+    then \
+    bash -c 'echo "deb https://debian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
+    && apt-key adv --keyserver pgp.surfnet.nl --recv-keys F727C778CCB0A455; \
+    else \
+    bash -c 'echo "deb https://raspbian.snips.ai/stretch stable main" > /etc/apt/sources.list.d/snips.list' \
+    && apt-key adv --keyserver pgp.surfnet.nl --recv-keys D4F50CDCA10A2849; \
+    fi
 
 RUN apt-get update \
-    && apt-get install -y snips-platform-voice snips-asr snips-watch \
+    && apt-get install -y snips-platform-voice snips-asr snips-injection snips-watch \
     && rm -rf /var/lib/apt/lists/* \
     && curl -L -o /assistant_Hass_de.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_de.zip \
     && curl -L -o /assistant_Hass_en.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_en.zip \
