--- a/cec_scan/config.json
+++ b/cec_scan/config.json
@@ -4,10 +4,11 @@
   "slug": "cec_scan",
   "description": "Scan HDMI CEC devices",
   "url": "https://home-assistant.io/addons/cec_scan/",
+  "arch": ["armhf", "aarch64", "amd64", "i386"],
   "startup": "once",
   "boot": "manual",
   "devices": [
-    "/dev/vchiq:/dev/vchiq:rwm"  
+    "/dev/vchiq:/dev/vchiq:rwm"
   ],
   "options": {},
   "schema": {},
