--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -4,6 +4,7 @@
   "slug": "letsencrypt",
   "description": "Manage certificate from Let's Encrypt",
   "url": "https://home-assistant.io/addons/lets_encrypt/",
+  "arch": ["armhf", "aarch64", "amd64", "i386"],
   "startup": "once",
   "boot": "manual",
   "ports": {
