--- a/ssh/config.json
+++ b/ssh/config.json
@@ -4,6 +4,7 @@
   "slug": "ssh",
   "description": "Allows connections over SSH",
   "url": "https://home-assistant.io/addons/ssh/",
+  "arch": ["armhf", "aarch64", "amd64", "i386"],
   "startup": "services",
   "boot": "auto",
   "hassio_api": true,
