--- a/homematic/config.json
+++ b/homematic/config.json
@@ -4,7 +4,7 @@
   "slug": "homematic",
   "description": "HomeMatic central based on OCCU",
   "url": "https://home-assistant.io/addons/homematic/",
-  "arch": ["armhf", "i386", "amd64"],
+  "arch": ["armv7", "i386"],
   "map": ["share:rw"],
   "startup": "system",
   "boot": "auto",
@@ -65,5 +65,5 @@
       }
     ]
   },
-  "image": "homeassistant/{arch}-addon-homeassistant"
+  "image": "homeassistant/{arch}-addon-homematic"
 }
