--- a/check_config/Dockerfile
+++ b/check_config/Dockerfile
@@ -4,8 +4,8 @@ FROM $BUILD_FROM
 # Setup base
 RUN apk add --no-cache \
         jq gcc \
-        libffi-dev libressl-dev musl-dev \
-    && pip3 install --no-cache --upgrade pip
+        libffi-dev openssl-dev musl-dev \
+    && pip3 install --no-cache --upgrade pip colorlog
 
 # Copy data
 COPY run.sh /
