--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Git pull",
-  "version": "7.3",
+  "version": "7.4",
   "slug": "git_pull",
   "description": "Simple git pull to update the local configuration",
   "url": "https://home-assistant.io/addons/git_pull/",
@@ -57,9 +57,9 @@
     },
     "webhook": {
       "active": "bool",
-      "secret": "?str",
-      "type": "?match(gitea|gogs|github|gitlab|simple)",
-      "whitelist": "?str"
+      "secret": "str?",
+      "type": "match(gitea|gogs|github|gitlab|simple)?",
+      "whitelist": "str?"
     }
   },
   "image": "homeassistant/{arch}-addon-git_pull"
