--- a/rpc_shutdown/Dockerfile
+++ b/rpc_shutdown/Dockerfile
@@ -5,7 +5,7 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Setup base
-RUN apk add --no-cache jq samba-common-tools samba-common
+RUN apk add --no-cache samba-common-tools samba-common
 
 # Copy data
 COPY run.sh /
