--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -1,10 +1,10 @@
 {
   "name": "Mosquitto broker",
-  "version": "4",
+  "version": "4.1",
   "slug": "mosquitto",
   "description": "An Open Source MQTT broker",
   "url": "https://home-assistant.io/addons/mosquitto/",
-  "arch": ["armhf", "aarch64", "amd64", "i386"],
+  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "system",
   "boot": "auto",
   "map": ["ssl", "share"],
