Add helper for build

--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -3,7 +3,12 @@ FROM $BUILD_FROM
 
 # Setup base
 ARG CERTBOT_VERSION
-RUN pip3 install --no-cache-dir certbot==${CERTBOT_VERSION}
+RUN apk add --no-cache \
+        openssl libffi musl libstdc++ \
+    && apk add --no-cache --virtual .build-dependencies \
+        gcc g++ musl-dev openssl-dev \
+    && pip3 install --no-cache-dir certbot==${CERTBOT_VERSION} \
+    && apk del .build-dependencies
 
 # Copy data
 COPY run.sh /
