--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -1,11 +1,14 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Add env
-ENV LANG C.UTF-8
-
 # Setup base
-RUN apk add --no-cache certbot
+ARG CERTBOT_VERSION
+RUN apk add --no-cache \
+        openssl libffi musl libstdc++ \
+    && apk add --no-cache --virtual .build-dependencies \
+        g++ musl-dev openssl-dev libffi-dev \
+    && pip3 install --no-cache-dir certbot==${CERTBOT_VERSION} \
+    && apk del .build-dependencies
 
 # Copy data
 COPY run.sh /
