--- a/deconz/config.json
+++ b/deconz/config.json
@@ -4,7 +4,7 @@
     "slug": "deconz",
     "description": "Control a ZigBee network with Conbee or RaspBee by Dresden Elektronik",
     "arch": ["amd64", "armhf"],
-    "url": "https://home-assistant.io/addons/deconz",
+    "url": "https://www.home-assistant.io/components/deconz/",
     "startup": "system",
     "boot": "auto",
     "webui": "http://[HOST]:[PORT:80]",
