Changes for configurator version 0.3.5

--- a/configurator/config.json
+++ b/configurator/config.json
@@ -22,6 +22,7 @@
     "ssl": false,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
+    "allowed_domains": ["hassio.local"],
     "ignore_pattern": ["__pycache__"],
     "dirsfirst": false,
     "enforce_basepath": false
@@ -30,6 +31,7 @@
     "ssl": "bool",
     "certfile": "str",
     "keyfile": "str",
+    "allowed_domains": ["str"],
     "ignore_pattern": ["str"],
     "dirsfirst": "bool",
     "enforce_basepath": "bool",
