remove backtick accident

--- a/snips/config.json
+++ b/snips/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Snips.AI´",
+  "name": "Snips.AI",
   "version": "5.2",
   "slug": "snips",
   "description": "Local voice control platform",
