Adding snips-injection (#546)
* Adding snips-injection
- Update dockerfile
- Snips injection version print
- Start snips-injection in run
- Versionbump to 5.2

* remove backtick accident

* Less run blocks

* format change in snips dockerfile

* Update CHANGELOG.md

--- a/snips/Dockerfile
+++ b/snips/Dockerfile
@@ -22,7 +22,7 @@ RUN apt-get update \
         fi
 
 RUN apt-get update \
-    && apt-get install -y snips-platform-voice snips-asr snips-watch \
+    && apt-get install -y snips-platform-voice snips-asr snips-injection snips-watch \
     && rm -rf /var/lib/apt/lists/* \
     && curl -L -o /assistant_Hass_de.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_de.zip \
     && curl -L -o /assistant_Hass_en.zip https://s3.amazonaws.com/hassio-addons-data/assistant_Hass_en.zip \
