--- a/configurator/Dockerfile
+++ b/configurator/Dockerfile
@@ -5,7 +5,7 @@ FROM $BUILD_FROM
 ARG CONFIGURATOR_VERSION
 ARG HASSIO_AUTH_VERSION
 RUN apk add --no-cache \
-    git nginx nginx-mod-http-lua \
+    git nginx nginx-mod-http-lua lua-resty-http \
   && git clone --depth 1 -b ${HASSIO_AUTH_VERSION} https://github.com/home-assistant/hassio-auth \
   && cp -f hassio-auth/nginx-frontend/* /etc/nginx/ \
   && rm -fr /usr/src/hassio-auth \
