--- a/deconz/config.json
+++ b/deconz/config.json
@@ -1,34 +1,37 @@
 {
-    "name": "deCONZ",
-    "version": "1.4",
-    "slug": "deconz",
-    "description": "Control a ZigBee network with Conbee or RaspBee by Dresden Elektronik",
-    "arch": ["amd64", "armhf"],
-    "url": "https://home-assistant.io/addons/deconz",
-    "startup": "system",
-    "boot": "auto",
-    "webui": "http://[HOST]:[PORT:80]",
-    "ports": {
-        "80/tcp": 9880,
-        "8080/tcp": 9881
-    },
-    "kernel_modules": true,
-    "auto_uart": true,
-    "gpio": true,
-    "apparmor": false,
-    "privileged": [
-        "SYS_MODULE",
-        "SYS_RAWIO"
-    ],
-    "devices": [
-        "/dev/bus/usb:/dev/bus/usb:rwm",
-        "/dev/mem:/dev/mem:rw"
-    ],
-    "options": {
-        "device": null
-    },
-    "schema": {
-        "device": "str"
-    },
-    "image": "homeassistant/{arch}-addon-deconz"
+  "name": "deCONZ",
+  "version": "2.0",
+  "slug": "deconz",
+  "description": "Control a ZigBee network with Conbee or RaspBee by Dresden Elektronik",
+  "arch": ["amd64", "armhf"],
+  "url": "https://home-assistant.io/addons/deconz",
+  "startup": "system",
+  "boot": "auto",
+  "homeassistant": "0.91.1",
+	"webui": "http://[HOST]:[PORT:80]/pwa",
+	"ingress": true,
+	"ingress_entry": "pwa",
+  "ports": {
+    "80/tcp": null,
+    "8080/tcp": null
+  },
+  "kernel_modules": true,
+  "auto_uart": true,
+  "gpio": true,
+  "apparmor": false,
+  "privileged": [
+    "SYS_MODULE",
+    "SYS_RAWIO"
+  ],
+  "devices": [
+    "/dev/bus/usb:/dev/bus/usb:rwm",
+    "/dev/mem:/dev/mem:rw"
+  ],
+  "options": {
+   "device": null
+  },
+  "schema": {
+    "device": "str"
+  },
+  "image": "homeassistant/{arch}-addon-deconz"
 }
