--- a/configurator/Dockerfile
+++ b/configurator/Dockerfile
@@ -3,13 +3,17 @@ FROM $BUILD_FROM
 
 # Setup base
 ARG CONFIGURATOR_VERSION
-RUN apk add --no-cache git curl openssh \
-  && pip3 install --no-cache-dir GitPython pyotp \
-  && curl -s -o /configurator.py https://raw.githubusercontent.com/danielperna84/hass-configurator/$CONFIGURATOR_VERSION/configurator.py \
-  && apk del curl
+ARG HASSIO_AUTH_VERSION
+RUN apk add --no-cache \
+    git nginx nginx-mod-http-lua lua-resty-http \
+  && git clone --depth 1 -b ${HASSIO_AUTH_VERSION} https://github.com/home-assistant/hassio-auth \
+  && cp -f hassio-auth/nginx-frontend/ha-auth.lua /etc/nginx/ \
+  && cp -f hassio-auth/nginx-frontend/example/nginx-ingress.conf /etc/nginx/ \
+  && rm -fr /usr/src/hassio-auth \
+  && pip install hass-configurator==${CONFIGURATOR_VERSION}
 
 # Copy data
+COPY configurator.conf /etc/
 COPY run.sh /
-RUN chmod a+x /run.sh
 
 CMD ["/run.sh"]
