--- a/configurator/config.json
+++ b/configurator/config.json
@@ -21,7 +21,13 @@
   "ports": {
     "8080/tcp": null
   },
-  "options": {},
-  "schema": {},
+  "options": {
+    "dirsfirst": false,
+    "enforce_basepath": false
+  },
+  "schema": {
+    "dirsfirst": "bool",
+    "enforce_basepath": "bool"
+  },
   "image": "homeassistant/{arch}-addon-configurator"
 }
