--- a/configurator/data/configurator.conf
+++ b/configurator/data/configurator.conf
@@ -3,7 +3,7 @@
     "PORT": 80,
     "GIT": true,
     "BASEPATH": "/config",
-    "ENFORCE_BASEPATH": false,
+    "ENFORCE_BASEPATH": %%ENFORCE_BASEPATH%%,
     "SSL_CERTIFICATE": null,
     "SSL_KEY": null,
     "IGNORE_SSL": false,
@@ -17,7 +17,7 @@
     "BANNED_IPS": [],
     "BANLIMIT": 0,
     "IGNORE_PATTERN": [],
-    "DIRSFIRST": false,
+    "DIRSFIRST": %%DIRSFIRST%%,
     "SESAME": null,
     "SESAME_TOTP_SECRET": null,
     "VERIFY_HOSTNAME": null,
