Use new network feature

--- a/deconz/data/nginx.conf
+++ b/deconz/data/nginx.conf
@@ -29,8 +29,7 @@ http {
 
     # Ingress
     server {
-        listen 8099 default_server;
-        listen [::]:8099 default_server;
+        listen 127.0.0.1:%%PORT%% default_server;
 
         allow   172.30.32.2;
         deny    all;
