--- a/deconz/data/nginx.conf
+++ b/deconz/data/nginx.conf
@@ -29,7 +29,7 @@ http {
 
     # Ingress
     server {
-        listen 127.0.0.1:%%PORT%% default_server;
+        listen %%INTERFACE%%:%%PORT%% default_server;
 
         allow   172.30.32.2;
         deny    all;
