--- a/deconz/data/nginx.conf
+++ b/deconz/data/nginx.conf
@@ -19,7 +19,7 @@ http {
 
     upstream backend {
         ip_hash;
-        server 127.0.0.1:80;
+        server 127.0.0.1:%%PORT%%;
     }
 
     map $http_upgrade $connection_upgrade {
@@ -29,7 +29,7 @@ http {
 
     # Ingress
     server {
-        listen %%INTERFACE%%:%%PORT%% default_server;
+        listen %%INGRESS_INTERFACE%%:%%INGERSS_PORT%% default_server;
 
         allow   172.30.32.2;
         deny    all;
