--- a/deconz/data/nginx.conf
+++ b/deconz/data/nginx.conf
@@ -29,7 +29,7 @@ http {
 
     # Ingress
     server {
-        listen %%INGRESS_INTERFACE%%:%%INGERSS_PORT%% default_server;
+        listen %%INGRESS_INTERFACE%%:%%INGRESS_PORT%% default_server;
 
         allow   172.30.32.2;
         deny    all;
