Add IGNORE_PATTERN to config-file

--- a/configurator/data/configurator.conf
+++ b/configurator/data/configurator.conf
@@ -16,7 +16,7 @@
     "ALLOWED_DOMAINS": [],
     "BANNED_IPS": [],
     "BANLIMIT": 0,
-    "IGNORE_PATTERN": [],
+    "IGNORE_PATTERN": %%IGNORE_PATTERN%%,
     "DIRSFIRST": %%DIRSFIRST%%,
     "SESAME": null,
     "SESAME_TOTP_SECRET": null,
