Allow build new version

--- a/deconz/Dockerfile
+++ b/deconz/Dockerfile
@@ -13,6 +13,8 @@ RUN apt-get update \
         lsof \
         tzdata \
         netcat \
+        gnupg-agen \
+        software-properties-common \
         libcap2-bin \
         libqt5core5a \
         libqt5gui5 \
